--- a/package.json
+++ b/package.json
@@ -8,15 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@buzuosheng/use-localstorage": "^2.2.2",
+    "@monaco-editor/react": "^4.3.1",
+    "@reduxjs/toolkit": "^1.7.1",
+    "codemirror": "^5.65.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-beforeunload": "^2.5.2",
+    "react-codemirror2": "^7.2.1",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.5",
     "@types/react": "17.0.38",
+    "@types/react-beforeunload": "^2.1.1",
+    "autoprefixer": "^10.4.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8",
     "typescript": "4.5.4"
   }
 }
