--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@monaco-editor/react": "^4.3.1",
     "@reduxjs/toolkit": "^1.7.1",
     "codemirror": "^5.65.1",
+    "html2canvas": "^1.4.1",
+    "monaco-editor": "^0.32.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-beforeunload": "^2.5.2",
